examples/avm-res-web-site/0.21.0/submodules/slot/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# slot submodule

This submodule manages deployment slots (`Microsoft.Web/sites/slots`) for an Azure App Service site.

It can be used independently to create and configure a deployment slot on an existing site, including:
- The slot resource itself
- Slot app settings
- Slot connection strings
- Slot storage account mounts
- Slot FTP and SCM publishing credential policies
- Slot locks, role assignments, and private endpoints

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_resource.lock](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.lock_private_endpoint](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.private_dns_zone_group](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.private_endpoint](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.role_assignment](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.role_assignment_private_endpoint](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_kind"></a> [kind](#input\_kind)

Description: The ARM kind of the app (e.g. `app`, `app,linux`, `functionapp`, `functionapp,linux`).

Type: `string`

### <a name="input_location"></a> [location](#input\_location)

Description: The Azure region for the slot.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: The name of the deployment slot.

Type: `string`

### <a name="input_os_type"></a> [os\_type](#input\_os\_type)

Description: The OS type of the app. Must be `Linux` or `Windows`.

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site.

Type: `string`

### <a name="input_service_plan_resource_id"></a> [service\_plan\_resource\_id](#input\_service\_plan\_resource\_id)

Description: The default App Service Plan resource ID (used if `server_farm_id` is not set).

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_app_settings"></a> [app\_settings](#input\_app\_settings)

Description: App settings for the slot.

Type: `map(string)`

Default: `{}`

### <a name="input_application_insights_connection_string"></a> [application\_insights\_connection\_string](#input\_application\_insights\_connection\_string)

Description: The Application Insights connection string (pre-computed from the parent module).

Type: `string`

Default: `null`

### <a name="input_application_insights_key"></a> [application\_insights\_key](#input\_application\_insights\_key)

Description: The Application Insights instrumentation key (pre-computed from the parent module).

Type: `string`

Default: `null`

### <a name="input_auto_generated_domain_name_label_scope"></a> [auto\_generated\_domain\_name\_label\_scope](#input\_auto\_generated\_domain\_name\_label\_scope)

Description: The scope of the auto-generated domain name label.

Type: `string`

Default: `null`

### <a name="input_client_affinity_enabled"></a> [client\_affinity\_enabled](#input\_client\_affinity\_enabled)

Description: Should client affinity be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_client_affinity_partitioning_enabled"></a> [client\_affinity\_partitioning\_enabled](#input\_client\_affinity\_partitioning\_enabled)

Description: Should client affinity partitioning (CHIPS) be enabled?

Type: `bool`

Default: `null`

### <a name="input_client_affinity_proxy_enabled"></a> [client\_affinity\_proxy\_enabled](#input\_client\_affinity\_proxy\_enabled)

Description: Should client affinity proxy be enabled?

Type: `bool`

Default: `null`

### <a name="input_client_certificate_enabled"></a> [client\_certificate\_enabled](#input\_client\_certificate\_enabled)

Description: Should client certificates be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_client_certificate_exclusion_paths"></a> [client\_certificate\_exclusion\_paths](#input\_client\_certificate\_exclusion\_paths)

Description: Paths to exclude from client certificate authentication.

Type: `string`

Default: `null`

### <a name="input_client_certificate_mode"></a> [client\_certificate\_mode](#input\_client\_certificate\_mode)

Description: The client certificate mode. Defaults to `Required`.

Type: `string`

Default: `"Required"`

### <a name="input_connection_strings"></a> [connection\_strings](#input\_connection\_strings)

Description: Connection strings for the slot.

Type:

```hcl
map(object({
    name  = optional(string)
    type  = optional(string)
    value = optional(string)
  }))
```

Default: `{}`

### <a name="input_container_size"></a> [container\_size](#input\_container\_size)

Description: The size of the function container in MB.

Type: `number`

Default: `null`

### <a name="input_dapr_config"></a> [dapr\_config](#input\_dapr\_config)

Description: Dapr configuration for the slot.

Type:

```hcl
object({
    app_id                = optional(string)
    app_port              = optional(number)
    enable_api_logging    = optional(bool)
    enabled               = optional(bool)
    http_max_request_size = optional(number)
    http_read_buffer_size = optional(number)
    log_level             = optional(string)
  })
```

Default: `null`

### <a name="input_dns_configuration"></a> [dns\_configuration](#input\_dns\_configuration)

Description: DNS configuration for the slot.

Type:

```hcl
object({
    alternate_private_dns_zone_id = optional(string)
    dns_legacy_sort_order         = optional(bool)
    dns_suffix                    = optional(string)
  })
```

Default: `null`

### <a name="input_enabled"></a> [enabled](#input\_enabled)

Description: Is the slot enabled? Defaults to `true`.

Type: `bool`

Default: `true`

### <a name="input_end_to_end_encryption_enabled"></a> [end\_to\_end\_encryption\_enabled](#input\_end\_to\_end\_encryption\_enabled)

Description: Should end-to-end encryption be enabled?

Type: `bool`

Default: `null`

### <a name="input_ftp_publish_basic_authentication_enabled"></a> [ftp\_publish\_basic\_authentication\_enabled](#input\_ftp\_publish\_basic\_authentication\_enabled)

Description: Should FTP basic authentication be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_function_app_uses_fc1"></a> [function\_app\_uses\_fc1](#input\_function\_app\_uses\_fc1)

Description: Whether the parent app uses Flex Consumption (FC1) plan.

Type: `bool`

Default: `false`

### <a name="input_host_names_disabled"></a> [host\_names\_disabled](#input\_host\_names\_disabled)

Description: Should public hostnames be disabled?

Type: `bool`

Default: `null`

### <a name="input_hosting_environment_id"></a> [hosting\_environment\_id](#input\_hosting\_environment\_id)

Description: The resource ID of the App Service Environment.

Type: `string`

Default: `null`

### <a name="input_https_only"></a> [https\_only](#input\_https\_only)

Description: Should the slot only be accessible over HTTPS? Defaults to `true`.

Type: `bool`

Default: `true`

### <a name="input_hyper_v"></a> [hyper\_v](#input\_hyper\_v)

Description: Should the slot run in Hyper-V isolation?

Type: `bool`

Default: `null`

### <a name="input_ip_mode"></a> [ip\_mode](#input\_ip\_mode)

Description: The IP mode. Possible values: `IPv4`, `IPv4AndIPv6`, `IPv6`.

Type: `string`

Default: `null`

### <a name="input_is_function_app"></a> [is\_function\_app](#input\_is\_function\_app)

Description: Whether the parent app is a function app.

Type: `bool`

Default: `false`

### <a name="input_key_vault_reference_identity"></a> [key\_vault\_reference\_identity](#input\_key\_vault\_reference\_identity)

Description: The identity to use for Key Vault references.

Type: `string`

Default: `null`

### <a name="input_lock"></a> [lock](#input\_lock)

Description: The lock to apply to the slot.

Type:

```hcl
object({
    kind = string
    name = optional(string, null)
  })
```

Default: `null`

### <a name="input_managed_environment_id"></a> [managed\_environment\_id](#input\_managed\_environment\_id)

Description: The Azure Container Apps managed environment ID.

Type: `string`

Default: `null`

### <a name="input_managed_identities"></a> [managed\_identities](#input\_managed\_identities)

Description: Controls the Managed Identity configuration on this resource. The following properties can be specified:

- `system_assigned` - (Optional) Specifies if the System Assigned Managed Identity should be enabled.
- `user_assigned_resource_ids` - (Optional) Specifies a list of User Assigned Managed Identity resource IDs to be assigned to this resource.

Type:

```hcl
object({
    system_assigned            = optional(bool, false)
    user_assigned_resource_ids = optional(set(string), [])
  })
```

Default: `{}`

### <a name="input_private_endpoints"></a> [private\_endpoints](#input\_private\_endpoints)

Description: Private endpoints for the slot.

Type:

```hcl
map(object({
    name = optional(string, null)
    role_assignments = optional(map(object({
      role_definition_id_or_name             = string
      principal_id                           = string
      description                            = optional(string, null)
      skip_service_principal_aad_check       = optional(bool, false)
      condition                              = optional(string, null)
      condition_version                      = optional(string, null)
      delegated_managed_identity_resource_id = optional(string, null)
      principal_type                         = optional(string, null)
    })), {})
    lock = optional(object({
      kind = string
      name = optional(string, null)
    }), null)
    tags                                    = optional(map(string), null)
    subnet_resource_id                      = string
    private_dns_zone_group_name             = optional(string, "default")
    private_dns_zone_resource_ids           = optional(set(string), [])
    application_security_group_associations = optional(map(string), {})
    private_service_connection_name         = optional(string, null)
    network_interface_name                  = optional(string, null)
    location                                = optional(string, null)
    resource_group_name                     = optional(string, null)
    ip_configurations = optional(map(object({
      name               = string
      private_ip_address = string
      member_name        = optional(string, null)
    })), {})
  }))
```

Default: `{}`

### <a name="input_private_endpoints_inherit_lock"></a> [private\_endpoints\_inherit\_lock](#input\_private\_endpoints\_inherit\_lock)

Description: Whether private endpoints should inherit the lock from the slot.

Type: `bool`

Default: `false`

### <a name="input_private_endpoints_manage_dns_zone_group"></a> [private\_endpoints\_manage\_dns\_zone\_group](#input\_private\_endpoints\_manage\_dns\_zone\_group)

Description: Whether to manage DNS zone groups for private endpoints.

Type: `bool`

Default: `true`

### <a name="input_public_network_access_enabled"></a> [public\_network\_access\_enabled](#input\_public\_network\_access\_enabled)

Description: Should public network access be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_redundancy_mode"></a> [redundancy\_mode](#input\_redundancy\_mode)

Description: The site redundancy mode.

Type: `string`

Default: `null`

### <a name="input_resource_config"></a> [resource\_config](#input\_resource\_config)

Description: Resource config for Container App environment hosted apps.

Type:

```hcl
object({
    cpu    = optional(number)
    memory = optional(string)
  })
```

Default: `null`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: Role assignments for the slot.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_scm_site_also_stopped"></a> [scm\_site\_also\_stopped](#input\_scm\_site\_also\_stopped)

Description: Should the SCM site also be stopped?

Type: `bool`

Default: `null`

### <a name="input_sensitive_app_settings"></a> [sensitive\_app\_settings](#input\_sensitive\_app\_settings)

Description: Sensitive app settings to merge (e.g. from the parent module's `slot_sensitive_app_settings` variable).

Type: `map(string)`

Default: `{}`

### <a name="input_server_farm_id"></a> [server\_farm\_id](#input\_server\_farm\_id)

Description: Optional override server farm resource ID for this slot.

Type: `string`

Default: `null`

### <a name="input_site_config"></a> [site\_config](#input\_site\_config)

Description: Site configuration for the deployment slot.

Type:

```hcl
object({
    always_on             = optional(bool, true)
    api_definition_url    = optional(string)
    api_management_api_id = optional(string)
    app_command_line      = optional(string)
    app_scale_limit       = optional(number)
    auto_heal_enabled     = optional(bool)
    auto_heal_rules = optional(object({
      actions = optional(object({
        action_type = string
        custom_action = optional(object({
          exe        = string
          parameters = optional(string)
        }))
        min_process_execution_time = optional(string, "00:00:00")
      }))
      triggers = optional(object({
        private_bytes_in_kb = optional(number)
        requests = optional(object({
          count         = number
          time_interval = string
        }))
        slow_requests = optional(object({
          count         = number
          time_interval = string
          time_taken    = string
          path          = optional(string)
        }))
        slow_requests_with_path = optional(list(object({
          count         = number
          time_interval = string
          time_taken    = string
          path          = optional(string)
        })), [])
        status_codes = optional(list(object({
          count         = number
          time_interval = string
          status        = number
          path          = optional(string)
          sub_status    = optional(number)
          win32_status  = optional(number)
        })), [])
        status_codes_range = optional(list(object({
          count         = number
          time_interval = string
          status_codes  = string
          path          = optional(string)
        })), [])
      }))
    }))
    auto_swap_slot_name                           = optional(string)
    container_registry_managed_identity_client_id = optional(string)
    container_registry_use_managed_identity       = optional(bool)
    cors = optional(object({
      allowed_origins     = optional(list(string))
      support_credentials = optional(bool, false)
    }))
    default_documents              = optional(list(string))
    detailed_error_logging_enabled = optional(bool)
    document_root                  = optional(string)
    dotnet_framework_version       = optional(string, "v4.0")
    elastic_instance_minimum       = optional(number)
    elastic_web_app_scale_limit    = optional(number)
    experiments = optional(object({
      ramp_up_rules = optional(list(object({
        action_host_name             = optional(string)
        change_decision_callback_url = optional(string)
        change_interval_in_minutes   = optional(number)
        change_step                  = optional(number)
        max_reroute_percentage       = optional(number)
        min_reroute_percentage       = optional(number)
        name                         = optional(string)
        reroute_percentage           = optional(number)
      })), [])
    }))
    ftps_state = optional(string, "FtpsOnly")
    handler_mappings = optional(list(object({
      arguments        = optional(string)
      extension        = optional(string)
      script_processor = optional(string)
    })))
    health_check_path    = optional(string)
    http2_enabled        = optional(bool, false)
    http20_proxy_flag    = optional(number)
    http_logging_enabled = optional(bool)
    ip_restriction = optional(list(object({
      action                    = optional(string, "Allow")
      ip_address                = optional(string)
      name                      = optional(string)
      priority                  = optional(number, 65000)
      service_tag               = optional(string)
      virtual_network_subnet_id = optional(string)
      headers = optional(object({
        x_azure_fdid      = optional(list(string))
        x_fd_health_probe = optional(list(string))
        x_forwarded_for   = optional(list(string))
        x_forwarded_host  = optional(list(string))
      }))
    })), [])
    ip_restriction_default_action = optional(string, "Allow")
    java_container                = optional(string)
    java_container_version        = optional(string)
    java_version                  = optional(string)
    limits = optional(object({
      max_disk_size_in_mb = optional(number)
      max_memory_in_mb    = optional(number)
      max_percentage_cpu  = optional(number)
    }))
    linux_fx_version                 = optional(string)
    load_balancing_mode              = optional(string, "LeastRequests")
    local_mysql_enabled              = optional(bool, false)
    logs_directory_size_limit        = optional(number)
    managed_pipeline_mode            = optional(string, "Integrated")
    min_tls_cipher_suite             = optional(string)
    minimum_tls_version              = optional(string, "1.3")
    node_version                     = optional(string)
    php_version                      = optional(string)
    powershell_version               = optional(string)
    pre_warmed_instance_count        = optional(number)
    python_version                   = optional(string)
    remote_debugging_enabled         = optional(bool, false)
    remote_debugging_version         = optional(string)
    request_tracing_enabled          = optional(bool)
    request_tracing_expiration_time  = optional(string)
    runtime_scale_monitoring_enabled = optional(bool)
    scm_ip_restriction = optional(list(object({
      action                    = optional(string, "Allow")
      ip_address                = optional(string)
      name                      = optional(string)
      priority                  = optional(number, 65000)
      service_tag               = optional(string)
      virtual_network_subnet_id = optional(string)
      headers = optional(object({
        x_azure_fdid      = optional(list(string))
        x_fd_health_probe = optional(list(string))
        x_forwarded_for   = optional(list(string))
        x_forwarded_host  = optional(list(string))
      }))
    })), [])
    scm_ip_restriction_default_action      = optional(string, "Allow")
    scm_minimum_tls_version                = optional(string, "1.2")
    scm_type                               = optional(string, "None")
    scm_use_main_ip_restriction            = optional(bool, false)
    tracing_options                        = optional(string)
    use_32_bit_worker                      = optional(bool, false)
    vnet_private_ports_count               = optional(number)
    vnet_route_all_enabled                 = optional(bool, false)
    website_time_zone                      = optional(string)
    websockets_enabled                     = optional(bool, false)
    windows_fx_version                     = optional(string)
    worker_count                           = optional(number)
    application_insights_connection_string = optional(string)
    application_insights_key               = optional(string)
    application_stack = optional(object({
      docker = optional(object({
        docker_image_name   = optional(string)
        docker_registry_url = optional(string)
        docker_image_tag    = optional(string, "latest")
      }))
      dotnet = optional(object({
        dotnet_version              = optional(string)
        current_stack               = optional(string)
        use_custom_runtime          = optional(bool, false)
        use_dotnet_isolated_runtime = optional(bool, false)
      }))
      java = optional(object({
        java_version           = optional(string)
        java_container         = optional(string)
        java_container_version = optional(string)
      }))
      node = optional(object({
        node_version = optional(string)
      }))
      php = optional(object({
        php_version = optional(string)
      }))
      python = optional(object({
        python_version = optional(string)
      }))
      powershell = optional(object({
        powershell_version = optional(string)
      }))
    }))
    virtual_application = optional(list(object({
      physical_path   = optional(string, "site\\wwwroot")
      preload_enabled = optional(bool, false)
      virtual_path    = optional(string, "/")
      virtual_directory = optional(list(object({
        physical_path = optional(string)
        virtual_path  = optional(string)
      })), [])
    })), [])
  })
```

Default: `{}`

### <a name="input_ssh_enabled"></a> [ssh\_enabled](#input\_ssh\_enabled)

Description: Should SSH be enabled?

Type: `bool`

Default: `null`

### <a name="input_storage_account_required"></a> [storage\_account\_required](#input\_storage\_account\_required)

Description: Should a storage account be required?

Type: `bool`

Default: `null`

### <a name="input_storage_shares_access_keys"></a> [storage\_shares\_access\_keys](#input\_storage\_shares\_access\_keys)

Description: A map of access keys for storage shares to mount, keyed by the storage share mount key (sensitive).

Type: `map(string)`

Default: `{}`

### <a name="input_storage_shares_to_mount"></a> [storage\_shares\_to\_mount](#input\_storage\_shares\_to\_mount)

Description: Storage shares to mount on the slot.

Type:

```hcl
map(object({
    account_name = string
    mount_path   = string
    name         = string
    share_name   = string
    type         = optional(string, "AzureFiles")
  }))
```

Default: `{}`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: Tags to apply to the slot.

Type: `map(string)`

Default: `null`

### <a name="input_virtual_network_subnet_id"></a> [virtual\_network\_subnet\_id](#input\_virtual\_network\_subnet\_id)

Description: The subnet ID for VNet integration.

Type: `string`

Default: `null`

### <a name="input_vnet_application_traffic_enabled"></a> [vnet\_application\_traffic\_enabled](#input\_vnet\_application\_traffic\_enabled)

Description: Should application traffic use VNet routing? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_vnet_backup_restore_enabled"></a> [vnet\_backup\_restore\_enabled](#input\_vnet\_backup\_restore\_enabled)

Description: Should backup/restore traffic use VNet routing? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_vnet_content_share_enabled"></a> [vnet\_content\_share\_enabled](#input\_vnet\_content\_share\_enabled)

Description: Should content share traffic use VNet routing? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_vnet_image_pull_enabled"></a> [vnet\_image\_pull\_enabled](#input\_vnet\_image\_pull\_enabled)

Description: Should image pull traffic use VNet routing? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_vnet_route_all_traffic"></a> [vnet\_route\_all\_traffic](#input\_vnet\_route\_all\_traffic)

Description: Should all outbound traffic use VNet routing? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_webdeploy_publish_basic_authentication_enabled"></a> [webdeploy\_publish\_basic\_authentication\_enabled](#input\_webdeploy\_publish\_basic\_authentication\_enabled)

Description: Should WebDeploy basic authentication be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_workload_profile_name"></a> [workload\_profile\_name](#input\_workload\_profile\_name)

Description: The workload profile name.

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_identity_principal_id"></a> [identity\_principal\_id](#output\_identity\_principal\_id)

Description: The principal ID of the system-assigned managed identity (if enabled).

### <a name="output_lock"></a> [lock](#output\_lock)

Description: The lock resource for this slot.

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the deployment slot.

### <a name="output_private_endpoints"></a> [private\_endpoints](#output\_private\_endpoints)

Description: The private endpoints created for this slot.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full slot resource object.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the deployment slot.

## Modules

The following Modules are called:

### <a name="module_avm_interfaces"></a> [avm\_interfaces](#module\_avm\_interfaces)

Source: Azure/avm-utl-interfaces/azure

Version: 0.5.1

### <a name="module_config_appsettings"></a> [config\_appsettings](#module\_config\_appsettings)

Source: ../config_appsettings

Version:

### <a name="module_config_azurestorageaccounts"></a> [config\_azurestorageaccounts](#module\_config\_azurestorageaccounts)

Source: ../config_azurestorageaccounts

Version:

### <a name="module_config_connectionstrings"></a> [config\_connectionstrings](#module\_config\_connectionstrings)

Source: ../config_connectionstrings

Version:

### <a name="module_ftp_publishing_credential_policy"></a> [ftp\_publishing\_credential\_policy](#module\_ftp\_publishing\_credential\_policy)

Source: ../publishing_credential_policy

Version:

### <a name="module_scm_publishing_credential_policy"></a> [scm\_publishing\_credential\_policy](#module\_scm\_publishing\_credential\_policy)

Source: ../publishing_credential_policy

Version:

### <a name="module_site_config_helpers"></a> [site\_config\_helpers](#module\_site\_config\_helpers)

Source: ../site_config_helpers

Version:

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft's privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
